--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,237 @@
-/*# sourceMappingURL=style.css.map */
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Regular.woff2") format("woff2"), url("../fonts/Poppins-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+body {
+  font-size: 15px;
+  font-family: "Poppins";
+}
+@media only screen and (min-width: 768px) {
+  body {
+    font-size: 16px;
+  }
+}
+
+@media only screen and (min-width: 1400px) {
+  .container {
+    width: 1620px;
+  }
+}
+
+.headerr {
+  background-color: rgb(255, 255, 255);
+}
+
+.hdr_row {
+  width: 100%;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.hdr_row .hdr_logo {
+  width: 20%;
+}
+.hdr_row .hdr_logo .billo {
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.hdr_menu {
+  width: 80%;
+  display: none;
+}
+@media only screen and (min-width: 768px) {
+  .hdr_menu {
+    display: initial;
+  }
+}
+.hdr_menu ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: end;
+  align-items: center;
+}
+.hdr_menu ul li {
+  position: relative;
+  list-style: none;
+  margin: 0px 15px;
+}
+.hdr_menu ul li a {
+  text-decoration: none;
+  color: #0d0a0a;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.hdr_menu ul li:hover a {
+  color: rgb(30, 27, 227);
+}
+
+.menu_trans li a::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 3px;
+  width: 0%;
+  background: #34efdf;
+  border-radius: 12px;
+  transition: all 0.4s ease;
+}
+
+.menu_trans li a:hover:before {
+  width: 100%;
+}
+
+#page {
+  width: 80%;
+  display: flex;
+  justify-content: end;
+}
+@media only screen and (min-width: 768px) {
+  #page {
+    display: none;
+  }
+}
+
+.fa-bars {
+  color: #0d0a0a !important;
+  font-size: 24px !important;
+}
+
+image hover content css start .containerr {
+  margin-top: 100px;
+  margin-bottom: 50px;
+  display: flex;
+}
+
+.hover_ovlay_box {
+  width: 400px;
+  margin: auto;
+  position: relative;
+}
+.hover_ovlay_box img {
+  width: 100%;
+  border-radius: 15px;
+}
+.hover_ovlay_box .slider {
+  background-color: rgba(52, 239, 223, 0.2509803922);
+  border-radius: 15px;
+  position: absolute;
+  width: 400px;
+  bottom: 100%;
+  left: 0px;
+  top: 0px;
+  height: 0px;
+  overflow: hidden;
+  transition: 0.7s;
+}
+.hover_ovlay_box .slider .content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.hover_ovlay_box:hover .slider {
+  height: 100%;
+  bottom: 0px;
+}
+
+.any_test {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: red;
+  position: relative;
+  animation: myfirst 1.5s linear 0.5s infinite reverse;
+  margin: 50px auto;
+}
+.any_test img {
+  width: 100%;
+  border-radius: 50%;
+}
+
+@keyframes myfirst {
+  from {
+    width: 200px;
+    height: 200px;
+  }
+  to {
+    width: 220px;
+    height: 220px;
+  }
+}
+.bubble_ani {
+  position: relative;
+  background-image: url(../image/ab.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 600px;
+  padding-bottom: 100px;
+}
+
+.bubble_images {
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.bubble_img {
+  border-radius: 50%;
+  animation: bubble 7s linear infinite;
+}
+
+@keyframes bubble {
+  0% {
+    transform: translateY(0);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  70% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-600px);
+    opacity: 0;
+  }
+}
+.bubble_img:nth-child(1) {
+  animation-delay: 1s;
+  width: 40px;
+}
+
+.bubble_img:nth-child(2) {
+  animation-delay: 3s;
+  width: 50px;
+}
+
+.bubble_img:nth-child(3) {
+  animation-delay: 2s;
+  width: 70px;
+}
+
+.bubble_img:nth-child(4) {
+  animation-delay: 5s;
+  width: 80px;
+}
+
+.bubble_img:nth-child(5) {
+  animation-delay: 4s;
+  width: 60px;
+}
+
+.bubble_img:nth-child(6) {
+  animation-delay: 6s;
+  width: 70px;
+}/*# sourceMappingURL=style.css.map */
