--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,7 +61,10 @@ $sec-sec-color: #ffffff;
         li{position: relative;
             list-style: none;
             // padding: 0px 15px;
-            margin: 0px 15px;
+            margin: 0px 7px;
+            @include minwidth(992px) {
+                margin: 0px 15px; 
+            }         
             a{
                 text-decoration: none;
                 color: $secondary-font-color;
@@ -186,6 +189,46 @@ $sec-sec-color: #ffffff;
         color: $secondary-font-color;  
         margin: auto;      
         padding: 15px 0px;
+    }
+}
+.card_row{
+    margin-top: 20px;  
+}
+.card{
+    border: 0px;
+    position: relative;
+    img{
+        max-width: 100%;
+        height: 150px;
+        margin: auto;
+        object-fit: cover;
+    }
+    i{
+        position: absolute;
+        top: 42%;
+        left: 45%;
+        color: $prmary-font-color;
+        background: linear-gradient(to right, rgba(39, 45, 222, 0.521),rgb(5, 10, 137));
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 25px;
+        border-radius: 50%;
+        @include minwidth(768px) {
+        top: 32%;
+        }
+        @include minwidth(992px) {
+            top: 37%;
+            }
+    }
+}
+.card-body{
+    margin-top: 30px;
+    .card-title{
+        font-size: 20px;
+        font-weight: 600;
     }
 }
 // service css end
