--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,9 @@ body {
 
 .headerr {
   background-color: #ffffff;
+  position: sticky;
+  top: 0px;
+  z-index: 33;
 }
 
 .hdr_row {
@@ -57,6 +60,7 @@ body {
 .hdr_menu ul li {
   position: relative;
   list-style: none;
+  padding: 0px 15px;
   margin: 0px 7px;
 }
 @media only screen and (min-width: 992px) {
@@ -70,6 +74,9 @@ body {
   font-weight: 600;
   font-size: 14px;
 }
+.hdr_menu ul li a.active {
+  color: rgb(30, 27, 227) !important;
+}
 
 .hdr_menu ul li:hover a {
   color: rgb(30, 27, 227);
@@ -79,7 +86,7 @@ body {
   content: "";
   position: absolute;
   bottom: 0;
-  left: 0;
+  left: 7px;
   height: 3px;
   width: 0%;
   background: #34efdf;
@@ -88,7 +95,7 @@ body {
 }
 
 .menu_trans li a:hover:before {
-  width: 100%;
+  width: 80%;
 }
 
 #page {
@@ -107,19 +114,20 @@ body {
   font-size: 24px !important;
 }
 
-.bannar_sec {
+#bannar_sec {
   background-image: url(../image/ofice.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
 }
-.bannar_sec .banar_ovlay {
+
+.banar_ovlay {
   background-color: rgba(0, 200, 255, 0.612);
   padding: 50px 0px;
 }
 @media only screen and (min-width: 768px) {
-  .bannar_sec .banar_ovlay {
+  .banar_ovlay {
     padding: 100px 10px;
   }
 }
@@ -250,4 +258,63 @@ body {
 .card-body .card-title {
   font-size: 20px;
   font-weight: 600;
+}
+
+#about {
+  background-image: url(../image/w.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+}
+
+.wtch_vdo_row {
+  max-width: 780px;
+  margin: auto;
+  text-align: center;
+}
+.wtch_vdo_row .wtch_vdo_hding {
+  color: #ffffff;
+  font-size: 25px;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 20px;
+}
+@media only screen and (min-width: 650px) {
+  .wtch_vdo_row .wtch_vdo_hding {
+    font-size: 35px;
+  }
+}
+.wtch_vdo_row .watch_vdo_devider {
+  height: 3px;
+  width: 70px;
+  margin-bottom: 40px;
+  background: linear-gradient(to right, rgba(77, 82, 227, 0.521), rgb(7, 13, 172));
+  margin: auto;
+}
+
+.watch_vdo_p {
+  color: #ffffff;
+  text-align: center;
+  max-width: 700px;
+  margin: auto;
+  padding-top: 20px;
+}
+
+.video-btn {
+  color: #ffffff;
+  display: inline-flex;
+  width: 60px;
+  height: 60px;
+  text-decoration: none;
+  background: linear-gradient(to right, rgb(3, 6, 109), rgb(42, 46, 173));
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  display: inline-flex;
+  margin: 10px auto;
+}
+.video-btn:hover {
+  background: linear-gradient(to right, rgb(13, 18, 150), rgb(69, 74, 217));
+  transform: translateY(-4px);
 }/*# sourceMappingURL=style.css.map */
